aaFramework.css
/* ... */
.aaMenu > ul > li ul li:hover > button > span.fa.icon{
    color: var(--submit-color);
    color: var(--color-blue-darker);
    color: var(--menu-shortcut-color);
}
.aaMenu > ul > li ul li:hover > ul{
    display: table;
}
.aaMenu > ul > li > ul > li > ul > li > ul{
    display: none;
    z-index: 3;
}
.aaMenu > ul > li > ul > li > ul > li:hover > ul{
    display: table;
}
.aaMenu > ul > li > button:disabled,
.aaMenu > ul > li > input[type=button]:disabled,
.aaMenu > ul > li > button:disabled:hover,
.aaMenu > ul > li > input[type=button]:disabled:hover{
    font-family: var(--font-family);
    background: transparent;
    color: var(--menu-disabled-color);
}
.aaMenu > ul > li > ul li button:disabled,
.aaMenu > ul > li > ul li input[type=button]:disabled,
.aaMenu > ul > li > ul li button:disabled:hover,
.aaMenu > ul > li > ul li input[type=button]:disabled:hover{
    font-family: 'Fira EL', Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
    background: #fff;
    color: var(--menu-disabled-color);
}
.aaMenu > ul > li ul li.disabled{
    background: transparent;
}
.aaMenu > ul > li ul li.disabled button,
.aaMenu > ul > li ul li.disabled input[type=button]{
    font-family: var(--font-family);
    background: transparent;
    color: var(--menu-disabled-color);
}
.aaMenu > ul > li ul li.disabled > button > span.fa.icon{
    color: var(--menu-disabled-color);
}
.aaMenu > ul > li ul li.disabled ul{
    display: none;
}
.aaMenu > ul > li ul li.disabled.shortcut::before{
    color: #e8e8e8;
}
/****************/
/* Context menu */
/****************/
body.aaContextMenuFreeze {
    overflow: hidden;
}
#aaContextMenuBG {
    background: rgba(128,128,128,0.1);
}
#aaContextMenu {
    position: fixed;
    top: 1px;
    left: 1px;
}
#aaContextMenu ul{
    cursor: default;
    margin: 0px;
    padding: 4px 0px;
    min-width: 160px;
    color: #666;

    z-index: 2;
    display: none;
    position: absolute;
    top: -4px;
    left: 100%;
    padding: 4px 0px;
    background: #fff;
    border-radius: 2px;
    box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
    box-shadow: 0px 8px 32px rgba(0,0,0,0.3);
}
#aaContextMenu ul hr{
    margin: 4px 0px;
    padding: 0px;
    border: 0px solid transparent;
    border-top: 1px solid rgba(128,128,128,0.1);
}
#aaContextMenu ul li{
    cursor: default;
    list-style: none;
    display: block;
    position: relative;
    width: 100%;
}
#aaContextMenu ul li div.disabled{
    padding: 4px 8px;
    background: transparent;
    color: #aaa;
    color: rgba(0,0,0,0.4);
    text-align: left;
    border: 0px;
    box-shadow: 0px 0px 0px transparent;
}
#aaContextMenu ul li button:active,
#aaContextMenu ul li input[type="button"]:active{
    border: 0;
}
#aaContextMenu ul li button:focus > span.fa.icon,
#aaContextMenu ul li:hover button > span.fa.icon {
    color: var(--submit-color);
    color: var(--color-blue-darker);
    color: var(--menu-shortcut-color);
}
#aaContextMenu ul li button > span.fa.icon.critical {
    color: var(--button-red-bg-color);
}
#aaContextMenu ul li:hover button > span.fa.icon.critical,
#aaContextMenu ul li button:focus > span.fa.icon.critical {
    color: #f8f;
}
#aaContextMenu ul li button > span.fa.icon.warning {
    color: var(--warning-color);
}
#aaContextMenu ul li button > span.fa.icon.confirm,
#aaContextMenu ul li button > span.fa.icon.information {
    color: var(--confirm-color);
}
#aaContextMenu ul li button > span.fa.icon.reset {
    color: var(--reset-color);
}
#aaContextMenu ul li.shortcut::before {
    content: attr(data-shortcut);
    position: absolute;
    top: 6px;
    right: 8px;
    display: table-cell;
    float: right;
    font-family: 'Fira EL', Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
    font-size: 12px;
    color: var(--menu-shortcut-color);
}
#aaContextMenu ul li.expand::before {
    position: absolute;
    top: 6px;
    right: 8px;
    display: table-cell;
    float: right;
    /*content: '▶';*/
    /*content: '►';*/
    content: '▸';
    color: #000;
}
#aaContextMenu ul li.expand:hover::before {
    color: #fff;
}
#aaContextMenu > ul {
    display: table;
}
#aaContextMenu > ul li button,
#aaContextMenu > ul li input[type=button] {
    font-weight: normal;
    margin: 0;
    padding: 4px 8px;
    width: 100%;
    background: transparent;
    text-align: left;
    font-family: var(--font-family);
    line-height: 1.5;
    white-space: nowrap;
    border-radius: 0;
    border: 0px;
    box-sizing: border-box;
    box-shadow: 0px 0px 0px transparent;

    /*padding: 8px 24px;*/
    padding-right: 64px;
    min-width: 180px;
    width: 100%;
    text-align: left;
}
#aaContextMenu > ul li button:focus,
#aaContextMenu > ul li input[type=button]:focus {
    background: var(--submit-bg-color);
    color: var(--submit-color);
}
#aaContextMenu ul li:hover{
    background: var(--submit-bg-color);
}
#aaContextMenu ul li:hover > button,
#aaContextMenu ul li:hover > input[type=button]{
    color: var(--submit-color);
}
#aaContextMenu ul li.expand:hover > ul{
    display: table;
}
#aaContextMenu > ul > li > ul > li:hover > button,
#aaContextMenu > ul > li > ul > li:hover > input[type=button]{
    color: #fff;
}
#aaContextMenu > ul > li > ul > li > ul{
    display: none;
    z-index: 3;
}
#aaContextMenu > ul > li > ul > li:hover > ul{
    display: table;
}
#aaContextMenu li.disabled ul{
    display: none;
}
#aaContextMenu button:disabled,
#aaContextMenu input[type=button]:disabled,
#aaContextMenu button:disabled:hover,
#aaContextMenu input[type=button]:disabled:hover{
    font-family: var(--font-family);
    background: #fff;
    color: var(--menu-disabled-color);
}
#aaContextMenu li button:disabled,
#aaContextMenu li input[type=button]:disabled,
#aaContextMenu li button:disabled:hover,
#aaContextMenu li input[type=button]:disabled:hover{
    font-family: var(--font-family);
    background: #fff;
    color: var(--menu-disabled-color);
}
/* ... */

